--- a/about.html
+++ b/about.html
@@ -142,58 +142,61 @@
         <hr>
         <div class="row">
             <div class="col-md-7">
-                <div class="container">
-                    <img src="./imgs/events_management.png" class="img-fluid rounded" alt="Cinque Terre">
-                    <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla neque, semper eget dolor fermentum,
-                        pellentesque mollis quam. Fusce at purus ac urna tempor imperdiet sollicitudin eget turpis. Interdum
-                        et malesuada fames ac ante ipsum primis in faucibus.</p>
-                    <p>Curabitur pharetra, eros quis dapibus hendrerit, nisl dolor vulputate ligula, quis sollicitudin erat
-                        massa quis tortor. Nam sodales enim sed dolor vestibulum efficitur. Vestibulum tincidunt commodo
-                        elit, nec fringilla magna laoreet id.</p>
-                </div>
+                <img src="./imgs/events_management.png" class="img-fluid rounded" alt="Cinque Terre">
             </div>
             <div class="col-md-5">
                 <div class="container">
-                    <h3>The development team</h3>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="card">
-                                <img class="card-img-top img-fluid rounded" src="./imgs/img_avatar1.png" alt="Card image">
-                                <div class="card-body">
-                                    <h4 class="card-title">John Doe</h4>
-                                    <p class="card-text">Professional Designer</p>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="card">
-                                <img class="card-img-top img-fluid rounded" src="./imgs/img_avatar2.png" alt="Card image">
-                                <div class="card-body">
-                                    <h4 class="card-title">John Doe</h4>
-                                    <p class="card-text">Professional Designer</p>
-                                </div>
+                    <h3>About Event Manager</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla neque, semper eget dolor fermentum,
+                        pellentesque mollis quam. Fusce at purus ac urna tempor imperdiet sollicitudin eget turpis. Interdum
+                        et malesuada fames ac ante ipsum primis in faucibus.</p>
+                    <p>Curabitur pharetra, eros quis dapibus hendrerit, nisl dolor vulputate ligula, quis sollicitudin erat
+                        massa quis tortor. Nam sodales enim sed dolor vestibulum efficitur. </p>
+                </div>
+            </div>
+
+            <div class="container mt-5">
+                <h3>The development team</h3>
+                <hr>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <img class="card-img-top img-fluid rounded" src="./imgs/img_avatar1.png" alt="Card image">
+                            <div class="card-body">
+                                <h4 class="card-title">John Doe</h4>
+                                <p class="card-text">Professional Designer</p>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="card">
-                                <img class="card-img-top img-fluid rounded" src="./imgs/img_avatar3.png" alt="Card image">
-                                <div class="card-body">
-                                    <h4 class="card-title">John Doe</h4>
-                                    <p class="card-text">Professional Designer</p>
-                                </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <img class="card-img-top img-fluid rounded" src="./imgs/img_avatar2.png" alt="Card image">
+                            <div class="card-body">
+                                <h4 class="card-title">John Doe</h4>
+                                <p class="card-text">Professional Designer</p>
                             </div>
-                            <hr>
-                            <div class="card">
-                                <img class="card-img-top img-fluid rounded" src="./imgs/img_avatar4.png" alt="Card image">
-                                <div class="card-body">
-                                    <h4 class="card-title">John Doe</h4>
-                                    <p class="card-text">Professional Designer</p>
-                                </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <img class="card-img-top img-fluid rounded" src="./imgs/img_avatar3.png" alt="Card image">
+                            <div class="card-body">
+                                <h4 class="card-title">John Doe</h4>
+                                <p class="card-text">Professional Designer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <img class="card-img-top img-fluid rounded" src="./imgs/img_avatar4.png" alt="Card image">
+                            <div class="card-body">
+                                <h4 class="card-title">John Doe</h4>
+                                <p class="card-text">Professional Designer</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
 
     </div>
