--- a/A3/eventPage.html
+++ b/A3/eventPage.html
@@ -114,7 +114,7 @@
         <div class="row" >
             <div class="col-lg-4 col-12">
                 <a class="nav-link d-flex justify-content-center " href=# data-toggle="modal" data-target="#images">
-                    <img class="img-fluid rounded mainImg" src="plog.jpg" alt="plog">
+                    <img class="img-fluid rounded mainImg" src="./imgs/plog.jpg" alt="plog">
                 </a>
 
                 <div class="modal fade" id="images">
@@ -125,13 +125,13 @@
                             <div id="carouselExampleControls" class="carousel slide carouselimg" data-ride="carousel" >
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img class="img-fluid rounded " src="plog.jpg" alt="First slide" >
+                                        <img class="img-fluid rounded" src="./imgs/plog.jpg" alt="First slide" >
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="img-fluid rounded" src="maku.jpg" alt="Second slide" >
+                                        <img class="img-fluid rounded" src="./imgs/maku.jpg" alt="Second slide" >
                                     </div>
                                     <div class="align-items-center carousel-item">
-                                        <img class="img-fluid rounded" src="lights.jpg" alt="Third slide" >
+                                        <img class="img-fluid rounded" src="./imgs/lights.jpg" alt="Third slide" >
                                     </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -170,7 +170,7 @@
 
                 <div class="comment mb-2 row">
                     <div class="comment-avatar col-md-1 col-3 text-center pr-1">
-                        <img class="mx-auto rounded-circle img-fluid" src="maku.jpg" alt="avatar">
+                        <img class="mx-auto rounded-circle img-fluid" src="./imgs/maku.jpg" alt="avatar">
                     </div>
                     <div class="comment-content col-11">
                         <h6 class="small comment-meta"><a href="#">admin</a> Today, 2:38</h6>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="comment mb-2 row">
                     <div class="comment-avatar col-md-1 col-3 text-center pr-1">
-                        <img class="mx-auto rounded-circle img-fluid" src="maku.jpg" alt="avatar">
+                        <img class="mx-auto rounded-circle img-fluid" src="./imgs/maku.jpg" alt="avatar">
                     </div>
                     <div class="comment-content col-11">
                         <h6 class="small comment-meta"><a href="#">admin</a> Today, 2:38</h6>
