--- a/A3/eventPage.html
+++ b/A3/eventPage.html
@@ -150,8 +150,7 @@
       <div class="container" data-spy="scroll" data-offset="50" style="position:relative; overflow-y: scroll; height:37em">
         <div class="tab-content">
           <div id="discussion" class="container tab-pane fade show active"><br>
-		  <textarea placeholder="Write your post here!" class="pb-cmnt-textarea col-12 "></textarea>
-			<button type="button" class="btn btn-dark btn-lg btn-block">Comment</button>
+		  
 
             <div class="jumbotron p-1 mb-1 mt-1">
               <div class="row">
@@ -177,6 +176,9 @@
                 </div>
               </div>
             </div>
+			<textarea placeholder="Write your comment here!" class="pb-cmnt-textarea col-12 "></textarea>
+			<button type="button" class="btn btn-dark btn-lg btn-block">Comment</button>
+
 			
 			<div class="jumbotron p-1 mb-1">
             <div class="panel panel-primary">
