--- a/A3/eventPage.html
+++ b/A3/eventPage.html
@@ -176,8 +176,12 @@
                 </div>
               </div>
             </div>
-			<textarea placeholder="Write your comment here!" class="pb-cmnt-textarea col-12 "></textarea>
+			
+			<div class="jumbotron p-1 mb-1">
+              <textarea placeholder="Write your comment here!" class="pb-cmnt-textarea col-12 "></textarea>
 			<button type="button" class="btn btn-dark btn-lg btn-block">Comment</button>
+            </div>
+			
 
 			
 			<div class="jumbotron p-1 mb-1">
