--- a/A3/eventPage.html
+++ b/A3/eventPage.html
@@ -110,7 +110,6 @@
 </div>
 
 <a class="nav-link linkImg " href=# data-toggle="modal" data-target="#images">
-    <!--<img class="img-fluid mx-auto d-block mainImg" src="./imgs/lights.jpg" alt="lights">-->
 </a>
 <div class="modal fade" id="images">
     <div class="modal-dialog modal-lg modal-dialogImgEvent">
@@ -153,8 +152,41 @@
                 <p>
                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
                 </p>
-
-                <br>
+                <a class="" data-toggle="collapse" href="#Participants" role="button" aria-expanded="false" aria-controls="Participants"><i class="ion-reply"></i>Participants</a>
+                <div class="collapse col-12" id="Participants">
+                    <br>
+                    <div class="jumbotron p-1 mb-1 mt-1">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <img src="./imgs/jonas.png" class="img-fluid rounded" alt="Cinque Terre">
+                            </div>
+                            <div class="col-md-9">
+                                <h3>JonasGoncalves</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="jumbotron p-1 mb-1">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <img src="./imgs/cervi.png" class="img-fluid rounded" alt="Cinque Terre">
+                            </div>
+                            <div class="col-md-9">
+                                <h3>FrancoCervi</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="jumbotron p-1">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <img src="./imgs/aalmeida.png" class="img-fluid rounded" alt="Cinque Terre">
+                            </div>
+                            <div class="col-md-9">
+                                <h3>AndreAlmeida</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
                 <h6>Porto, Portugal</h6>
                 <div class="map-responsive">
                     <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Porto+Portugal" frameborder="0" style="border:0" allowfullscreen></iframe>
