--- a/A3/initial2.html
+++ b/A3/initial2.html
@@ -114,7 +114,7 @@
   <hr>
   <div class="row d-flex justify-content-center" >
     <div class="col-lg-3 col-12">
-      <ul class="nav nav-tabs flex-lg-column flex-sm-row vertical-tabs" id="v-tab" role="tablist" aria-orientation="vertical" >
+      <ul class="nav nav-tabs flex-lg-column flex-sm-row vertical-tabs initial2" id="v-tab" role="tablist" aria-orientation="vertical" >
         <li class="nav-item">
           <a class="nav-link active" id="v-all-tab" data-toggle="tab" href="#v-tab-all" role="tab" aria-controls="v-tab-all" aria-selected="true">All</a>
         </li>
