navbar done, footer done, notifications done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search">
             <span class="input-group-append">
-              <button type="button" class="btn btn-outline-light"><i class="fas fa-search"></i></button>
+              <button type="button" class="btn btn-outline-light" onclick="window.location.href='./search.html'"><i class="fas fa-search"></i></button>
             </span>
           </div>
 
@@ -158,20 +158,20 @@
 
 <div class="container" style="margin-top:10em">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xl-6">
       <div class="jumbotron">
         <h1>Event Manager</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lacus sed turpis tincidunt id aliquet risus feugiat in. Nunc sed velit dignissim sodales ut eu sem integer. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Tortor aliquam nulla facilisi cras fermentum odio eu. Diam maecenas sed enim ut sem. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in. In dictum non consectetur a erat. Nunc non blandit massa enim nec. Sed libero enim sed faucibus turpis in eu mi. Sit amet nisl suscipit adipiscing bibendum est ultricies integer quis.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiuxlod tempor incididunt ut labore et dolore magna aliqua. Lacus sed turpis tincidunt id aliquet risus feugiat in. Nunc sed velit dignissim sodales ut eu sem integer. Facilisi etiam dignissim diam quis enim lobortis scelerisque. Tortor aliquam nulla facilisi cras fermentum odio eu. Diam maecenas sed enim ut sem. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in. In dictum non consectetur a erat. Nunc non blandit massa enim nec. Sed libero enim sed faucibus turpis in eu mi. Sit amet nisl suscipit adipiscing bibendum est ultricies integer quis.</p>
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-12 col-xl-6">
       <div class="container">
         <div class="jumbotron p-1 mb-5 mt-1">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-3 col-5 d-flex align-items-center" >
               <img src="./imgs/square.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
-            <div class="col-md-9">
+            <div class="col-sm-9 col-7">
               <h3>Concerto Mega Fixe</h3>
               <h6>Porto, Portugal</h6>
               <h6>17/02/2018</h6>
@@ -180,10 +180,10 @@
         </div>
         <div class="jumbotron p-1 mb-5">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-3 col-5 d-flex align-items-center" >
               <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
-            <div class="col-md-9">
+            <div class="col-sm-9 col-7">
               <h3>Aniversário Makukula</h3>
               <h6>Kishasa, Congo</h6>
               <h6>04/03/2018</h6>
@@ -192,10 +192,10 @@
         </div>
         <div class="jumbotron p-1">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-3 col-5 d-flex align-items-center" >
               <img src="./imgs/plog.jpg" class="img-fluid rounded" alt="Cinque Terre">
             </div>
-            <div class="col-md-9">
+            <div class="col-sm-9 col-7">
               <h3>Notas de Plog</h3>
               <h6>Porto, Portugal</h6>
               <h6>29/02/2020</h6>
