--- a/A3/admin.html
+++ b/A3/admin.html
@@ -29,7 +29,7 @@
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search">
             <span class="input-group-append">
-              <button type="button" class="btn btn-outline-light"><i class="fas fa-search"></i></button>
+              <button type="button" class="btn btn-outline-light" onclick="window.location.href='./search.html'"><i class="fas fa-search"></i></button>
             </span>
           </div>
 
@@ -41,7 +41,15 @@
           <a class="nav-link" href=# data-toggle="modal" data-target="#add_event"><i class="fas fa-plus"></i> Add Event </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href=#><i class="fas fa-bell"></i> Notifications </a>
+          <div class="dropdown show">
+            <a class="nav-link dropdown-toggle" href=# id="notifications" data-toggle="dropdown"><i class="fas fa-bell"></i> Notifications </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="notifications">
+              <a class="dropdown-item p-2" href="./eventPage.html">Makukula joined an event</a>
+              <a class="dropdown-item p-2" href="#" data-toggle="modal" data-target="#add_friend">
+                MariGui wants to be your friend
+              </a>
+            </div>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./profile.html"><i class="fas fa-user"></i> Admin </a>
@@ -53,6 +61,30 @@
     </div>
   </div>
 </nav>
+
+<div class="modal fade" id="add_friend">
+  <div class="modal-dialog modal-sm">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Add Friend</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body ">
+        <img src="./imgs/maku.jpg" class="img-fluid rounded" alt="Cinque Terre">
+        <br><br>
+        <h5 class="text-center">MariGui wants to be your friend, do you accept?</h5>
+        <br>
+        <div class="btn-group d-flex" role="group">
+          <button type="button" class="btn btn-success w-100">YES</button>
+          <button type="button" class="btn btn-danger w-100">NO</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="modal fade" id="add_event">
   <div class="modal-dialog modal-sm">
@@ -105,7 +137,7 @@
           </label>
         </div>
 
-        <button type="button" class="btn btn-block btn-outline-dark mb-2">Add Event</button>
+        <button type="button" class="btn btn-block btn-outline-dark mb-2" onclick="window.location.href='./eventPage.html'">Add Event</button>
 
       </div>
     </div>
@@ -249,6 +281,11 @@
     </div>
   </div>
 </div>
+
+<footer>
+  <br><br>
+  <a href="./about.html"><p class="text-center">About Us</p></a>
+</footer>
 
 </body>
 </html>
